--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>asiantrade-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Asian Trade Connect</title>
+    <meta name="description" content="Asian Trade Connect - Bridging Luxury Across Asia" />
+    <meta name="author" content="Asian Trade Connect" />
     <meta property="og:image" content="/og-image.svg" />
   </head>
 
