--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <title>Asian Trade Connect</title>
     <meta name="description" content="Asian Trade Connect - Bridging Luxury Across Asia" />
     <meta name="author" content="Asian Trade Connect" />
